--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <title>Flatiron Task Lister</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+    <div id="main-content">
+        <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="#" method="post">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
-    </form>
+        <form id="create-task-form" action="#" method="post">
+            <label for="new-task-description">Task description:</label>
+            <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+            <input type="submit" id="submit-button" value="Create New Task">
+            <input type="submit" id="delete-list-button" value="Delete List">
+        </form>
 
-    <div id="list">
-      <h2>My Todos</h2>
-      <ul id="tasks">
-          <!--  <li> Task 1 </li>-->      
-      </ul>
+
+        <div id="list">
+            <h2>My Todos</h2>
+            <ul id="tasks">
+                <!--  <li> Task 1 </li>-->
+            </ul>
+        </div>
+
+        <script src="./src/index.js"></script>
     </div>
 
-    <script src="./src/index.js"></script>
-  </div>
-
 </body>
+
 </html>
